# costsplit

./: .env.example  .gitignore  alembic.ini  docker-compose.local.yml  pyproject.toml  script.sql
alembic/: env.py
alembic/versions/: 2021-12-12_667e24338945_add_trip.py  2021-12-20_ba980a5a2423_add_trip_name_length_constraint.py  2022-01-01_88c03f5f9cb5_add_participant.py  2022-01-10_a45ee114ea04_add_expense.py  2022-01-12_964ad909789b_rename_proportions_to_parts.py  2022-01-22_2307eb31e9ea_extract_parts_to_table.py
src/: bot.py  loader.py  permissions.py
src/app/: permissions.py  states.py
src/app/formatters/: __init__.py  parts.py
src/app/handlers/: consts.py  participant.py  trip.py
src/app/widgets/: keyboards.py  texts.py
src/application/formatters/: __init__.py  common.py  parts.py
src/application/handlers/: common.py  participant.py  trip.py
src/application/widgets/: keyboards.py
src/config/: __init__.py  injector.py  pyrogram.py  self.py
src/core/: injector.py  pyrogram.py  settings.py
src/db/: session.py
src/formatters/: __init__.py  consts.py  parts.py  trip.py
src/handlers/: consts.py  error.py  expense.py  participant.py  trip.py
src/keyboards/: common.py  trip.py
src/models/: __init__.py  expense.py  participant.py  trip.py
src/repositories/: __init__.py  base.py  expense.py  participant.py  trip.py  types.py
src/schemes/: base.py  expense.py  participant.py  trip.py
src/services/: __init__.py  base.py  expense.py  participant.py  trip.py
src/utils/: attrs.py  db.py  handlers.py
src/widgets/: keyboards.py
(+48 files in other folders)
