[tool.poetry]
name = "costsplit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.17.1"
SQLAlchemy = "^1.4.28"
asyncpg = "^0.25.0"
pydantic = "^1.8.2"
alembic = "^1.7.5"
psycopg2-binary = "^2.9.2"
dependency-injector = "^4.37.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
